# js-compiler

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  TODO.md  js-compiler-workspace.code-workspace  js.ebnf  js.ebnf.backup
bnf/: js.ebnf
cmake/: GTest.cmake  IWYU.cmake  bin2c.cmake
include/: Exception.hpp  Expression.hpp  JsIRBuilder.hpp  JsParser.hpp  LLTable.hpp  Lexer.hpp  Parser.hpp  Utility.hpp  Utils.hpp
parser-generator/: CMakeLists.txt
parser-generator/generated-parser/: LLTable.parser.hpp  LLTableBase.parser.hpp  Lexer.parser.hpp  Parser.parser.hpp  Regex.parser.hpp  Serializer.parser.hpp  Utility.parser.hpp
parser-generator/include/: CppGenerator.hpp  LLTable.hpp  LLTablePasses.hpp  Lexer.hpp  Parser.hpp  Regex.hpp  Utility.hpp  Utils.hpp
parser-generator/runtime-include/: CommonLLTable.hpp  CommonLLTable.parser.hpp  GeneratedLLTable.hpp  GeneratedLLTable.parser.hpp  GeneratedLexer.hpp  GeneratedLexer.parser.hpp  GeneratedParser.hpp  GeneratedParser.parser.hpp  LLTable.parser.hpp  LLTableBase.parser.hpp  Lexer.parser.hpp  Parser.parser.hpp  Regex.hpp  Regex.parser.hpp  RuntimeUtility.hpp
parser-generator/src/: Lexer.cpp  Main.cpp  Parser.cpp  Regex.cpp
parser-generator/template/: LLTable.hpp  Lexer.hpp  Parser.hpp
parser-generator/test/: Regex.cpp
parser-generator/unitTest/: Regex.cpp
src/: Exception.cpp  JsIRBuilder.cpp  JsParser.cpp  LLTable.cpp  Lexer.cpp  Main.cpp  Parser.cpp
test/: Compile.cpp  CompileTest.cpp  LLParsingTable.test.cpp
unitTest/: JsParser.cpp
